# Engimon-CPP

./: .gitignore  CMakeLists.txt  Makefile  build-from-cache.sh  build.sh  clean.sh  rebuild.sh  run.sh
src/: Element.hpp  Elementable.hpp  Elementum.hpp  Engidex.hpp  Engimon.hpp  ItemType.hpp  Skill.hpp  SkillItem.hpp  Species.hpp
src/ElementManager/: ElementManager.cpp  ElementManager.hpp
src/Elementum/: Elementum.cpp  Elementum.hpp
src/Engidex/: Engidex.cpp  Engidex.hpp
src/Engimon/: Engimon.cpp  Engimon.hpp  TestEngimon.cpp
src/Game/: Game.hpp
src/Inventory/: Inventory.cpp  Inventory.hpp  TestInventory.cpp
src/Map/: Map.cpp  Map.hpp
src/Player/: Player.cpp  Player.hpp
src/Skill/: Skill.cpp  Skill.hpp  TestSkill.cpp
src/SkillItem/: SkillItem.cpp  SkillItem.hpp
src/Species/: Species.cpp  Species.hpp
src/constant/: Direction.hpp  Element.hpp  EngimonException.hpp  EntitySource.hpp  Exception.hpp
src/constant/ItemType/: ItemType.hpp
src/include/: utils.hpp
src/include/lib/: ElementManager.hpp  Elementum.hpp  Engidex.hpp  Engimon.hpp  Game.hpp  Inventory.hpp  Map.hpp  Player.hpp  Skill.hpp  SkillItem.hpp  Species.hpp
src/include/lib/constant/: Color.hpp  Direction.hpp  (+5 more)
src/src/: main.cpp  utils.cpp
src/src/lib/: ElementManager.cpp  Elementum.cpp  Engidex.cpp  Engimon.cpp  Game.cpp  Inventory.cpp  Map.cpp  Player.cpp  Skill.cpp  SkillItem.cpp  Species.cpp
src/src/test/: TestElementManager.cpp  TestElementum.cpp  TestEngidex.cpp  TestEngimon.cpp  TestInv.cpp  TestInventory.cpp  TestMap.cpp  TestSkill.cpp  TestSkillItem.cpp  TestSpecies.cpp
(+1 files in other folders)
